# rockchip_camera

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.h  config.h  encoder.cpp  encoder.h  main.cpp  streamer_encoder.c  streamer_encoder.h  streamer_encoder_wrapper.h
